updated schedule time

--- a/.github/workflows/ai-news-agent.yml
+++ b/.github/workflows/ai-news-agent.yml
@@ -2,8 +2,7 @@ name: AI News Agent Daily Run
 
 on:
   schedule:
-    #- cron: "0 16 * * *"   # Every day at 8:00 AM PST
-    - cron: "45 1 * * *"   # Every day at 5:45 PM PST
+    - cron: "0 16 * * *"   # Every day at 8:00 AM PST
   workflow_dispatch:
   push:
     branches:
